[package]
name = "fold-babyjubjubs"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { version = "0.5.0", features = ["r1cs"] }
ark-grumpkin = {version="0.5.0", features=["r1cs"]}
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-r1cs-std = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.0", default-features = false }
ark-crypto-primitives = { version = "^0.5.0", default-features = false, features = [
    "r1cs",
    "sponge",
    "crh",
] }
ark-std = "0.5.0"
rand = "0.8.5"
rand_core = {version = "0.6", default-features = false}

# Note: for testing purposes we use the 'light-test' feature when importing
# Sonobe's folding-schemes, but for a real-world usage it must be used without
# this feature (but then the DeciderETH circuit is bigger and takes more time
# to compute).
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes", features=["light-test"], rev="964f9b6de91283c2bf12ffdd7578125dc999104a"}
# folding-schemes = { path = "../../sonobe/sonobe_FCIRCUIT-EXTINP/folding-schemes", package = "folding-schemes", features=["light-test"]}
blake2 = "0.10"
arkeddsa = { git = "https://github.com/arnaucube/arkeddsa", features=["r1cs"], rev="67c077e0e564d5f8d193a44f67357dfd1180cb64"}
# arkeddsa = { path = "../arkeddsa_TE-to-C", features=["r1cs"]}




[dev-dependencies]

[features]
default = []

