[package]
name = "fold-babyjubjubs"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { version = "0.5.0", features = ["r1cs"] }
ark-grumpkin = {version="0.5.0", features=["r1cs"]}
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-r1cs-std = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.0", default-features = false }
ark-crypto-primitives = { version = "^0.5.0", default-features = false, features = [
    "r1cs",
    "sponge",
    "crh",
] }
ark-std = "0.5.0"
rand = "0.8.5"
rand_core = {version = "0.6", default-features = false}

folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes", rev="c6f1a246e0705582a75de6becf4ad21f325fa5a1"}
blake2 = "0.10"
arkeddsa = { git = "https://github.com/arnaucube/arkeddsa", features=["r1cs"], rev="0a9ea7ac1df07363af0fda723e313e775563b9f4"}




[dev-dependencies]

[features]
default = []

